chore redis cache DB implementation